# ToyProjects

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  test.sh
Data/: CreateData.sh  ReadMe.md
Data/fonts/: ReadMe.txt
Data/input/fonts/: filelist
Data/input/shaders/: Text.fs  Text.vs
Data/processed/: ToyProjects.00.data  ToyProjects.01.data  ToyProjects.02.data  ToyProjects.03.data  ToyProjects.04.data  ToyProjects.05.data  ToyProjects.06.data  ToyProjects.07.data  ToyProjects.08.data  ToyProjects.09.data  ToyProjects.10.data  ToyProjects.11.data
Data/shaders/: Text.vs
Src/: CMakeLists.txt
Src/3rdPartyTest/: CMakeLists.txt
Src/3rdPartyTest/Boost/: FileSystemTest.cpp  IOStreamsTest.cpp
Src/3rdPartyTest/GoogleTest/: OutputTest.cpp
Src/3rdPartyTest/SQLite/: SQLiteTest.cpp
Src/Data/: CMakeLists.txt  README.md
Src/Data/include/: Data.h
Src/Data/src/: Data.cpp
Src/DataTest/: CMakeLists.txt  DataTest.cpp
Src/Geometry/: CMakeLists.txt
Src/Geometry/include/: Geometry.h
Src/Geometry/include/internal/: TLine.h
Src/Geometry/include/internal/2D/: Line.h  Point.h
Src/Geometry/include/internal/3D/: Line.h  Point.h
Src/GeometryTest/: CMakeLists.txt  GeometryTest.cpp  Line2dTest.cpp  Line3dTest.cpp
Src/Logger/: CMakeLists.txt  README.md
Src/Logger/include/: Logger.h  LoggerSinks.h
Src/Logger/include/internal/: Message.h
Src/Logger/src/: Logger.cpp
Src/Logger/src/Sinks/: AsyncQueue.cpp  AsynsQueue.cpp  Console.cpp  File.cpp  WinDebug.cpp
Src/LoggerTest/: CMakeLists.txt  LoggerTest.cpp
Src/MathCore/: CMakeLists.txt
Src/MathCore/include/: MathCore.h
Src/MathCore/include/internal/: Constants.h  Limits.h  Matrix.h  Numerics.h  Quaternion.h  RotationMatrix.h  Vector.h
Src/MathCore/include/internal-MathCore/: Numerics.h  Quaternion.h
Src/MathCore/include/internal/Matrix/: Matrix.h  MatrixData.h  MatrixDataFixed.h  MatrixFixed.h  MatrixFunctions.h  Vector.h  VectorFunctions.h
Src/MathCore/include/internal/Matrix/MatrixFunctions/: Clear.h  Cofactor.h  Determinant.h  Diag.h  Equal.h  Eye.h  Fill.h  Inverse.h  LUP.h  Minor.h  Multiply.h  PerformLogicOperator.h  PerformOperator.h  Random.h  SwapRows.h  Trace.h  Transpose.h  to_stream.h
Src/MathCore/src/: MathCore.cpp
Src/MathCoreTest/: CMakeLists.txt  MathCoreTest.cpp  MatrixFixedTest.cpp  MatrixStaticTest.cpp  MatrixTest.cpp  QuaternionTest.cpp  VectorTest.cpp
Src/OpenGL/: CMakeLists.txt
Src/OpenGL/include/: OpenGL.h
Src/OpenGL/include/internal/: CharacterMap.h  ColorValues.h  Font.h  Freetype.h  RGBAColor.h  RGBColor.h  Shaders.h
Src/OpenGL/src/: CharacterMap.cpp  Font.cpp  Freetype.cpp  OpenGL.cpp  Shaders.cpp
Src/OpenGLTest/: CMakeLists.txt  Main.cpp  UI.cpp  UI.h
Src/SQLiteDB/: CMakeLists.txt
Src/SQLiteDB/include/: SQLiteDB.h
Src/SQLiteDB/include/internal/: DB.h
Src/SQLiteDB/include/internal-SQLiteDB/: DB.h  DataType.h  Query.h  Statement.h
Src/SQLiteDB/src/: SQLiteDB.cpp  SQLiteDBState.h  SQLiteQuery.cpp  SQLiteQueryState.h  SQLiteStatement.cpp  SQLiteStatementState.h  SQLiteSupport.h
Src/SQLiteDBTest/: CMakeLists.txt  SQLiteTest.cpp
Src/Utils/: CMakeLists.txt
Src/Utils/include/: grid.h
Src/Utils/src/: Utils.cpp
Src/UtilsTest/: CMakeLists.txt  GridTest.cpp
cmake/: Common.cmake  Executable.cmake  Library.cmake
