# Include sub-projects.

add_subdirectory ("3rdPartyTest")
add_subdirectory ("MathCore")
add_subdirectory ("MathCoreTest")
add_subdirectory ("SQLiteDB")
add_subdirectory ("SQLiteDBTest")
add_subdirectory ("OpenGL")
add_subdirectory ("OpenGLTest")
add_subdirectory ("Data")
add_subdirectory ("DataTest")
add_subdirectory ("Utils")
add_subdirectory ("UtilsTest")
add_subdirectory ("Logger")
add_subdirectory ("LoggerTest")
add_subdirectory ("Geometry")
add_subdirectory ("GeometryTest")

